# trache

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PHASE3_VALIDATION_REPORT.md  README.md  VALIDATION_REPORT.md  pyproject.toml
.claude/skills/trache/: SKILL.md
.github/workflows/: test.yml
docs/: phase4-install-validation-report.md  phase4-mission-completion-report.md
src/trache/: __init__.py  config.py  identity.py
src/trache/api/: auth.py  client.py
src/trache/cache/: _atomic.py  _datetime.py  db.py  diff.py  index.py  models.py  snapshot.py  store.py  working.py
src/trache/cli/: _context.py  _errors.py  _output.py  agents.py  app.py  batch.py  board.py  card.py  checklist.py  comment.py  health.py  label.py  list_cmd.py
src/trache/sync/: pull.py  push.py  strategy.py
tests/: conftest.py  test_atomic_write.py  test_audit_fixes.py  test_batch.py  test_cache_store.py  test_checklists.py  test_cli.py  test_client_retry.py  test_content_modified_at.py  test_datetime.py  test_db.py  test_diff.py  test_health.py  test_identity.py  test_indexes.py  test_labels.py  test_multi_board.py  test_output.py  test_pull.py  test_pull_safety.py  test_push.py  test_stale.py  test_working.py
